<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable name="clickListener" type="com.akriti.gitprapp.utils.OnClickHandler" />
        <variable name="showLoading" type="Boolean" />
        <variable name="showInvalidInputError" type="Boolean" />
        <variable name="showError" type="Boolean" />
        <variable name="shouldEnableInput" type="Boolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/dp_26" >

            <ImageView
                android:id="@+id/github_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/dp_60"
                android:src="@drawable/ic_github" />

            <TextView
                android:id="@+id/greeting_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_mono_bold"
                android:text="@string/search_greeting"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/github_logo" />

            <TextView
                android:id="@+id/search_input_label"
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp_8"
                android:fontFamily="@font/cambay"
                android:text="@string/search_input_label"
                android:textSize="@dimen/sp_20"
                app:layout_constraintBottom_toTopOf="@id/search_input_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/greeting_text" />

            <EditText
                android:id="@+id/search_input_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/search_input_label"
                app:layout_constraintBottom_toTopOf="@id/search_confirm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:enabled="@{shouldEnableInput}"
                android:fontFamily="@font/cambay"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/search_input_hint" />

            <Button
                android:id="@+id/search_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_input_field"
                android:layout_marginTop="@dimen/dp_10"
                android:enabled="@{shouldEnableInput}"
                android:onClick="@{() -> clickListener.onClickListener()}"
                android:text="@string/search_button" />

            <ProgressBar
                android:id="@+id/search_in_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{showLoading ? View.VISIBLE: View.GONE, default=gone}"
                android:layout_marginTop="@dimen/dp_40"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{showError ? View.VISIBLE: View.GONE, default=gone}"
                android:layout_marginTop="@dimen/dp_40"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/red"
                android:text="@string/search_general_error" />

            <TextView
                android:id="@+id/invalid_input_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{showInvalidInputError ? View.VISIBLE: View.GONE, default=gone}"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/dp_40"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/red"
                android:text="@string/search_invalid_input_error" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>